change background login page + fix overflow

--- a/efluid-datagate-app/src/main/resources/static/css/loginPage.css
+++ b/efluid-datagate-app/src/main/resources/static/css/loginPage.css
@@ -15,7 +15,7 @@
 }
 
 #container-login {
-    width: 80%;
+    width: 100%;
     height: 90vh;
     background-color: #EDEDED;
     display: flex;
@@ -48,4 +48,10 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+#app-container {
+    background-color: #EDEDED;
+    height: 100vh;
+    overflow: hidden;
 }
